<resources>
    <string name="app_name">FTraveler</string>
    <string name="welcome">Welcome to Fellow Traveler</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Places</string>
    <string name="title_notifications">Messages</string>
    <string name="title_trips">Trips</string>
    <string name="title_login">Enter your phone number</string>
    <string name="title_login_step_2">Verify your phone</string>
    <string name="title_login_step_3">Profile information</string>
    <string name="personal_hint">Personal information</string>
    <string name="empty"></string>
    <string name="step_1_text">Application will send an SMS message to verify your phone number. Enter your country code and phone number.</string>
    <string name="step_2_text">We have sent you an SMS with a code to the number above.</string>
    <string name="step_2_text_addition">To complete your phone number verification, please enter the 6-digit activation code.</string>


    <string name="agree">AGREE AND CONTINUE</string>
    <string name="privacy">Read our Privacy Policy. Tap \'Agree and continue\' to accept the <a href="https://www.google.com/">Terms of Service</a>.</string>

    <string name="style_json">[
          {
            "featureType": "poi.business",
            "stylers": [
              {
                "visibility": "off"
              }
            ]
          },
          {
            "featureType": "road",
            "elementType": "labels.icon",
            "stylers": [
              {
                "visibility": "off"
              }
            ]
          },
          {
            "featureType": "transit",
            "stylers": [
              {
                "visibility": "off"
              }
            ]
          }
    ]
    </string>

</resources>
