<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login_step_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LandingFragment">

    <TextView
        android:id="@+id/step_1_text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />


    <ImageView
        android:id="@+id/landing_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/background"
        app:layout_constraintBottom_toTopOf="@+id/privacy_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_1_text_title" />

    <Button
        android:id="@+id/login_button_step_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/agree"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/privacy_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/privacy"
        app:layout_constraintBottom_toTopOf="@id/login_button_step_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>